fied small bug with last bookmark overflowing past the ipad boundaries

--- a/styles/main.css
+++ b/styles/main.css
@@ -86,7 +86,7 @@
   position: relative;
   top: 10%;
   float: left;
-  width: 20px;
+  width: 19.5px;
   height: 100%;
   overflow: hidden;
   margin: 0px;
